[package]
authors = ["Owen Johnson <owen@owenjohnson.info>"]
edition = "2018"
readme = "README.md"
name = "wcc-remote"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
nb = "0.1.2"
stm32f1 = "0.10.0"
as-slice = "0.1"

[build]
target = "thumbv7m-none-eabi"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "wcc-remote"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]